
  [ YunQiang Su ]
  * [mipsel,mips64el/loongson-3] Enable AMDGPU.
  * [mips*] switch to vmlinuz from vmlinux except octeon.
  * [mips*] enable CONFIG_MIPS_O32_FP64_SUPPORT.
  * [mips*] enable CONFIG_CPU_HAS_MSA except octeon.

  [ Vagrant Cascadian ]
  * [arm64] drivers/gpu/drm/sun4i: Enable DRM_SUN8I_MIXER as a module.
    (Closes: #946510). Thanks to Andrei POPESCU.

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 05 Dec 2019 17:31:13 +0000

linux (5.4.2-1~exp1) experimental; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.4.1
    - Bluetooth: Fix invalid-free in bcsp_close()
    - ath9k_hw: fix uninitialized variable data
    - ath10k: Fix a NULL-ptr-deref bug in ath10k_usb_alloc_urb_from_pipe
      (CVE-2019-15099)
    - ath10k: Fix HOST capability QMI incompatibility
    - ath10k: restore QCA9880-AR1A (v1) detection
    - Revert "Bluetooth: hci_ll: set operational frequency earlier"
    - Revert "dm crypt: use WQ_HIGHPRI for the IO and crypt workqueues"
    - md/raid10: prevent access of uninitialized resync_pages offset
    - [x86] insn: Fix awk regexp warnings
    - [x86] speculation: Fix incorrect MDS/TAA mitigation status
    - [x86] speculation: Fix redundant MDS mitigation message
    - nbd: prevent memory leak
    - [i386] x86/stackframe/32: Repair 32-bit Xen PV
    - [i386] x86/xen/32: Make xen_iret_crit_fixup() independent of frame
      layout
    - [i386] x86/xen/32: Simplify ring check in xen_iret_crit_fixup()
    - [i386] x86/doublefault/32: Fix stack canaries in the double fault
      handler
    - [i386] x86/pti/32: Size initial_page_table correctly
    - [i386] x86/cpu_entry_area: Add guard page for entry stack on 32bit
    - [i386] x86/entry/32: Fix IRET exception
    - [i386] x86/entry/32: Use %ss segment where required
    - [i386] x86/entry/32: Move FIXUP_FRAME after pushing %fs in SAVE_ALL
    - [i386] x86/entry/32: Unwind the ESPFIX stack earlier on exception entry