@@ -143,3 +143,39 @@ Description: eBPF helper library (development files)
  manipulating eBPF objects from user-space.
  .
  This package is needed to compile programs against libbpf.
+
+Package: libtraceevent1
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: linux-any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Section: libs
+Multi-Arch: same
+Description: Linux kernel trace event library (shared library)
+ The libtraceevent library provides APIs to access kernel tracepoint events,
+ located in the tracefs file system under the events directory.
+ .
+ This package contains the shared library.
+
+Package: libtraceevent-dev
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: linux-any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libtraceevent1 (= ${binary:Version})
+Section: libdevel
+Multi-Arch: same
+Description: Linux kernel trace event library (development files)
+ The libtraceevent library provides APIs to access kernel tracepoint events,
+ located in the tracefs file system under the events directory.
+ .
+ This package is needed to compile programs against libtraceevent1.
+
+Package: libtraceevent1-plugin
+Build-Profiles: <!stage1 !pkg.linux.notools>
+Architecture: linux-any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libtraceevent1 (= ${binary:Version})
+Section: libs
+Multi-Arch: same
+Description: Linux kernel trace event library (plugins)
+ The libtraceevent library provides APIs to access kernel tracepoint events,
+ located in the tracefs file system under the events directory.
+ .
+ This package provides the plugins needed by the programs using libtraceevent1.
