@@ -382,6 +382,9 @@ linux (5.4.6-1~exp1) UNRELEASED; urgency=medium
   * [arm64] drivers/gpu/drm/sun4i: Enable DRM_SUN8I_MIXER as a module.
     (Closes: #946510). Thanks to Andrei POPESCU.
 
+  [ Sudip Mukherjee ]
+  * Add libtraceevent packages (Closes: #944138)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 05 Dec 2019 17:31:13 +0000
 
 linux (5.4.2-1~exp1) experimental; urgency=medium
